Support for embedded web content